mock up a searchbar interface that exposes the query builder
this would obvs mean the query builder needs to do a few things (front
end and back end facing as well):
 * render the query to a text format for both display and the querystring
 * be keyboard navigatble and triggerable
 * not be nearly as confusing
 * better defaults
 * parse the text query into a query ast against
 * compile ast to ES or SQL queries and run

this idea would render the query into a querystring text query
that would get parsed on the backend to revert back to more
traditional search patterns and alleviate the need for a search model
and all that business that is also bringing more complexity

--- a/app/assets/stylesheets/public.scss
+++ b/app/assets/stylesheets/public.scss
@@ -30,89 +30,136 @@
   }
 }
 
-.tb.nav.search {
+.tb {
   display: flex;
-  flex-grow: 1;
 
-  background: #1B1C1D;
-  color: rgba(255, 255, 255, 0.9);
+  &.navbar.search {
+    flex: 1 0 auto;
+    flex-direction: column;
 
-  & > .input {
-    display: flex;
-    flex-grow: 1;
+    position: relative;
 
-    & > form {
+    color: rgba(255, 255, 255, 0.9);
+
+    .info {
+      justify-self: center;
+
+      flex-direction: column;
+      justify-content: center;
+
+      text-align: center;
+
+      .title {
+        display: block;
+      }
+
+      .query {
+        display: block;
+
+        color: #9d9d9d;
+      }
+    }
+
+    .dropdown {
       flex-grow: 1;
 
-      & > input[type="search"] {
-        border-width: 0;
-        border-radius: 0;
-        width: 100%;
-        height: 100%;
+      transform-origin: center top;
+      position: absolute;
+      top: 100%;
+      left: 0%;
 
-        background: #1B1C1D;
-        color: rgba(255, 255, 255, 0.9);
+      width: 100%;
 
-        &:focus {
-          background: rgba(255, 255, 255, 0.15);
-          color: #ffffff !important;
-        }
-      }
-    }
-  }
+      z-index: 998;
+      visibility: visible;
 
-  & > .results {
-    width: 100%;
-    flex-grow: 1;
+      padding-top: .9em;
+      padding-left: 1.14em;
+      padding-right: 1.14em;
+      padding-bottom: .9em;
 
-    background: rgb(27, 28, 29);
-    box-sizing: border-box;
-    color: rgba(255, 255, 255, 0.9);
-    display: block;
-    flex-grow: 1;
-    position: absolute;
-    top: 100%;
-    left: 0%;
-    transform-origin: center top;
-    visibility: visible;
-    z-index: 998;
-
-    margin-top: 0;
-    border-radius: 0;
-
-    border: 0;
-
-    & > :first-child, & > :last-child {
-      border-radius: 0;
-    }
-
-    & > .action {
-      background: transparent;
+      background: rgb(27, 28, 29);
+//      background: rgba(255, 255, 255, 0.15);
       color: rgba(255, 255, 255, 0.9);
-
-      &:hover {
-        background: rgba(255, 255, 255, 0.15);
-      }
-    }
-
-    & > .message.empty {
-      & > .header, & > .description {
-        color: rgba(255, 255, 255, 0.9);
-      }
-    }
-
-    & > .result {
-      color: rgba(255, 255, 255, 0.9);
-
-      &:hover {
-        background: rgba(255, 255, 255, 0.15);
-      }
-
-      & > .content {
-        & > .title, & > .description {
-          color: rgba(255, 255, 255, 0.9);
-        }
-      }
     }
   }
 }
+
+//   & > .input {
+//     display: flex;
+//     flex-grow: 1;
+// 
+//     & > form {
+//       flex-grow: 1;
+// 
+//       & > input[type="search"] {
+//         border-width: 0;
+//         border-radius: 0;
+//         width: 100%;
+//         height: 100%;
+// 
+//         background: #1B1C1D;
+//         color: rgba(255, 255, 255, 0.9);
+// 
+//         &:focus {
+//           background: rgba(255, 255, 255, 0.15);
+//           color: #ffffff !important;
+//         }
+//       }
+//     }
+//   }
+// 
+//   & > .results {
+//     width: 100%;
+//     flex-grow: 1;
+// 
+//     background: rgb(27, 28, 29);
+//     box-sizing: border-box;
+//     color: rgba(255, 255, 255, 0.9);
+//     display: block;
+//     flex-grow: 1;
+//     position: absolute;
+//     top: 100%;
+//     left: 0%;
+//     transform-origin: center top;
+//     visibility: visible;
+//     z-index: 998;
+// 
+//     margin-top: 0;
+//     border-radius: 0;
+// 
+//     border: 0;
+// 
+//     & > :first-child, & > :last-child {
+//       border-radius: 0;
+//     }
+// 
+//     & > .action {
+//       background: transparent;
+//       color: rgba(255, 255, 255, 0.9);
+// 
+//       &:hover {
+//         background: rgba(255, 255, 255, 0.15);
+//       }
+//     }
+// 
+//     & > .message.empty {
+//       & > .header, & > .description {
+//         color: rgba(255, 255, 255, 0.9);
+//       }
+//     }
+// 
+//     & > .result {
+//       color: rgba(255, 255, 255, 0.9);
+// 
+//       &:hover, &.active {
+//         background: rgba(255, 255, 255, 0.15);
+//       }
+// 
+//       & > .content {
+//         & > .title, & > .description {
+//           color: rgba(255, 255, 255, 0.9);
+//         }
+//       }
+//     }
+//   }
