--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -40,6 +40,33 @@ html, body{
   display: none;
 }
 
+kbd {
+  display: inline-block !important;
+  margin: 0 0.1em;
+  padding: 0.1em 0.6em;
+
+  font-size: 11px;
+  font-family: Arial,Helvetica,sans-serif;
+
+  background-color: #f7f7f7;
+  color: #333;
+
+  border: 1px solid #444;
+  border-radius: 3px;
+
+  line-height: 1.4;
+
+  white-space: nowrap;
+
+  &.dark {
+    background-color: #333;
+    color: #f7f7f7;
+
+    border: 1px solid #444;
+    border-radius: 3px;
+  }
+}
+
 // Semantic UI has these classes, however they're only applicable to
 // grids, containers, rows and columns.
 // plus, there isn't any `mobile hidden`, `X hidden` class.
