--- a/app/assets/stylesheets/public.scss
+++ b/app/assets/stylesheets/public.scss
@@ -15,7 +15,6 @@
  */
 @import "common";
 
-
 .bookmarks.list {
   .item {
     .inline {
@@ -31,37 +30,51 @@
 }
 
 .tb {
-  display: flex;
-
   &.navbar.search {
-    flex: 1 0 auto;
-    flex-direction: column;
-
     position: relative;
 
+    width: 100%;
+
     color: rgba(255, 255, 255, 0.9);
+    padding: 0em 1.14em;
 
-    .info {
-      justify-self: center;
+    .navbar-item {
+      display: grid;
+      grid-template-columns: [left] 1fr [center] 1fr [right] 1fr;
 
-      flex-direction: column;
+      width: 100%;
+      height: 100%;
+
+      align-content: center;
       justify-content: center;
 
-      text-align: center;
+      .header {
+        grid-area: center;
+        text-align: center;
 
-      .title {
-        display: block;
+        .title {
+          display: block;
+        }
+
+        .query {
+          display: block;
+
+          color: #9d9d9d;
+        }
       }
 
-      .query {
-        display: block;
+      .key {
+        grid-area: right;
+        align-self: center;
 
-        color: #9d9d9d;
+        display: flex;
+        justify-content: flex-end;
       }
     }
 
     .dropdown {
-      flex-grow: 1;
+      display: flex;
+      flex-direction: column;
 
       transform-origin: center top;
       position: absolute;
@@ -69,97 +82,62 @@
       left: 0%;
 
       width: 100%;
+      min-height: 150px;
 
       z-index: 998;
-      visibility: visible;
 
-      padding-top: .9em;
-      padding-left: 1.14em;
-      padding-right: 1.14em;
-      padding-bottom: .9em;
+      padding: .5em .9em;
 
       background: rgb(27, 28, 29);
-//      background: rgba(255, 255, 255, 0.15);
       color: rgba(255, 255, 255, 0.9);
+
+      .content {
+        flex: 1 0 auto;
+      }
+
+      .tips {
+        flex: 0 0 auto;
+
+        width: 100%;
+        border-top: 1px solid #444;
+        padding-top: .5em;
+
+        display: grid;
+        grid-template-columns: [left] 1fr [center] 1fr [right] 1fr;
+
+        align-content: center;
+
+        & > .left {
+          grid-area: left;
+          justify-content: flex-start;
+        }
+
+        & > .center {
+          grid-area: center;
+          justify-content: center;
+        }
+
+        & > .right {
+          grid-area: right;
+          justify-content: flex-end;
+        }
+
+        & > .left, & > .center, & > .right {
+          display: flex;
+
+          .key-combo {
+            display: flex;
+
+            &:not(:first-child) {
+              padding-left: 1em;
+            }
+
+            :last-child {
+              margin-right: .5em;
+            }
+          }
+        }
+      }
     }
   }
 }
-
-//   & > .input {
-//     display: flex;
-//     flex-grow: 1;
-// 
-//     & > form {
-//       flex-grow: 1;
-// 
-//       & > input[type="search"] {
-//         border-width: 0;
-//         border-radius: 0;
-//         width: 100%;
-//         height: 100%;
-// 
-//         background: #1B1C1D;
-//         color: rgba(255, 255, 255, 0.9);
-// 
-//         &:focus {
-//           background: rgba(255, 255, 255, 0.15);
-//           color: #ffffff !important;
-//         }
-//       }
-//     }
-//   }
-// 
-//   & > .results {
-//     width: 100%;
-//     flex-grow: 1;
-// 
-//     background: rgb(27, 28, 29);
-//     box-sizing: border-box;
-//     color: rgba(255, 255, 255, 0.9);
-//     display: block;
-//     flex-grow: 1;
-//     position: absolute;
-//     top: 100%;
-//     left: 0%;
-//     transform-origin: center top;
-//     visibility: visible;
-//     z-index: 998;
-// 
-//     margin-top: 0;
-//     border-radius: 0;
-// 
-//     border: 0;
-// 
-//     & > :first-child, & > :last-child {
-//       border-radius: 0;
-//     }
-// 
-//     & > .action {
-//       background: transparent;
-//       color: rgba(255, 255, 255, 0.9);
-// 
-//       &:hover {
-//         background: rgba(255, 255, 255, 0.15);
-//       }
-//     }
-// 
-//     & > .message.empty {
-//       & > .header, & > .description {
-//         color: rgba(255, 255, 255, 0.9);
-//       }
-//     }
-// 
-//     & > .result {
-//       color: rgba(255, 255, 255, 0.9);
-// 
-//       &:hover, &.active {
-//         background: rgba(255, 255, 255, 0.15);
-//       }
-// 
-//       & > .content {
-//         & > .title, & > .description {
-//           color: rgba(255, 255, 255, 0.9);
-//         }
-//       }
-//     }
-//   }
