--- a/app/assets/stylesheets/public.scss
+++ b/app/assets/stylesheets/public.scss
@@ -33,14 +33,15 @@
   &.navbar.search {
     position: relative;
 
-    width: 100%;
+    display: flex;
+    flex: 1 0 auto;
 
     color: rgba(255, 255, 255, 0.9);
     padding: 0em 1.14em;
 
     .navbar-item {
       display: grid;
-      grid-template-columns: [left] 1fr [center] 1fr [right] 1fr;
+      grid-template-columns: [left] 1fr [center] 2fr [right] 1fr;
 
       width: 100%;
       height: 100%;
@@ -103,7 +104,7 @@
         padding-top: .5em;
 
         display: grid;
-        grid-template-columns: [left] 1fr [center] 1fr [right] 1fr;
+        grid-template-columns: [left] 2fr [center] 1fr [right] 2fr;
 
         align-content: center;
 
