--- a/app/assets/stylesheets/public.scss
+++ b/app/assets/stylesheets/public.scss
@@ -30,6 +30,30 @@
 }
 
 .tb {
+  & > .key-combo {
+    display: flex;
+
+    &:not(:first-child) {
+      padding-left: 1em;
+    }
+
+    & > :last-child {
+      margin-right: .5em;
+    }
+  }
+
+  &.query-builder {
+    .conjoiner {
+      margin-bottom: 1em;
+    }
+
+    .clauses > .group {
+      margin-left: 1em;
+      padding-left: 1em;
+      border-left: 2px solid darkred;
+    }
+  }
+
   &.navbar.search {
     position: relative;
 
@@ -39,7 +63,7 @@
     color: rgba(255, 255, 255, 0.9);
     padding: 0em 1.14em;
 
-    .navbar-item {
+    & > .navbar-item {
       display: grid;
       grid-template-columns: [left] 1fr [center] 2fr [right] 1fr;
 
@@ -49,22 +73,22 @@
       align-content: center;
       justify-content: center;
 
-      .header {
+      & > .header {
         grid-area: center;
         text-align: center;
 
-        .title {
+        & > .title {
           display: block;
         }
 
-        .query {
+        & > .query {
           display: block;
 
           color: #9d9d9d;
         }
       }
 
-      .key {
+      & > .key {
         grid-area: right;
         align-self: center;
 
@@ -73,7 +97,7 @@
       }
     }
 
-    .dropdown {
+    & > .dropdown {
       display: flex;
       flex-direction: column;
 
@@ -92,11 +116,11 @@
       background: rgb(27, 28, 29);
       color: rgba(255, 255, 255, 0.9);
 
-      .content {
+      & > .content {
         flex: 1 0 auto;
       }
 
-      .tips {
+      & > .tips {
         flex: 0 0 auto;
 
         width: 100%;
@@ -107,6 +131,10 @@
         grid-template-columns: [left] 2fr [center] 1fr [right] 2fr;
 
         align-content: center;
+
+        & > .left, & > .center, & > .right {
+          display: flex;
+        }
 
         & > .left {
           grid-area: left;
@@ -121,22 +149,6 @@
         & > .right {
           grid-area: right;
           justify-content: flex-end;
-        }
-
-        & > .left, & > .center, & > .right {
-          display: flex;
-
-          .key-combo {
-            display: flex;
-
-            &:not(:first-child) {
-              padding-left: 1em;
-            }
-
-            :last-child {
-              margin-right: .5em;
-            }
-          }
         }
       }
     }
