zero state updates

--- a/app/views/bookmarks/search/_no_results_state.html.haml
+++ b/app/views/bookmarks/search/_no_results_state.html.haml
@@ -1,6 +1,6 @@
 %h1.huge.center.aligned.icon.header
   %i.bookmark.icon
-  .content Nothing found!
+  Nothing found!
 
 %p Maybe try loosening your search query, or go out and make that bookmark!
 
