add origin to nodes and basic error handling for the first pass

--- a/app/views/bookmarks/search/index.html.haml
+++ b/app/views/bookmarks/search/index.html.haml
@@ -10,7 +10,9 @@
     %i.search.icon
 
 %h1 Search Results
-- if params[:q].blank?
+- if @error
+  = render partial: "query_error"
+- elsif params[:q].blank?
   = render partial: "zero_state"
 - elsif @bookmarks.empty?
   = render partial: "no_results_state"
