--- a/app/assets/stylesheets/public.scss
+++ b/app/assets/stylesheets/public.scss
@@ -42,18 +42,6 @@
     }
   }
 
-  &.query-builder {
-    .conjoiner {
-      margin-bottom: 1em;
-    }
-
-    .clauses > .group {
-      margin-left: 1em;
-      padding-left: 1em;
-      border-left: 2px solid darkred;
-    }
-  }
-
   &.navbar.search {
     position: relative;
 
@@ -65,13 +53,44 @@
 
     & > .navbar-item {
       display: grid;
-      grid-template-columns: [left] 1fr [center] 2fr [right] 1fr;
+      grid-template-columns: [center] 1fr [right] 30px;
 
       width: 100%;
       height: 100%;
 
       align-content: center;
       justify-content: center;
+
+      & > .input {
+        grid-area: center;
+        text-align: center;
+
+        //font-size: 80%;
+
+        & > form {
+          flex-grow: 1;
+
+          & > input[type="search"] {
+            border-width: 0;
+            border-radius: 0;
+
+            width: 100%;
+            height: 100%;
+
+            background: #1B1C1D;
+            //color: rgba(255, 255, 255, 0.9);
+            color: #9d9d9d;
+
+            text-align: center;
+
+            &:focus, &:active {
+              //background: rgba(255, 255, 255, 0.15);
+              //color: #ffffff !important;
+              color: #9d9d9d;
+            }
+          }
+        }
+      }
 
       & > .header {
         grid-area: center;
