make bookmark show view into two fluid columns
this means the title and soonish the extracted text and favicon is on the left
while the description/annotations are on the right.
Also move the menu bar to the top, putting the tags in it as well

--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -16,7 +16,12 @@ html, body{
 }
 
 .main.container, .main.grid {
-  margin-top: 5em;
+  margin-top: 53px;
+
+  & > .margined {
+    margin-right: 5em;
+    margin-left: 5em;
+  }
 }
 
 .item.padder {
