--- a/app/views/oauth/applications/show.html.haml
+++ b/app/views/oauth/applications/show.html.haml
@@ -5,7 +5,7 @@
 
 %h2.ui.dividing.header= @application.name
 
-.ui.fluid.text.menu
+.ui.fluid.text.stackable.menu
   .ui.item
     = link_to "Edit", edit_oauth_application_path(@application)
 
