--- a/app/assets/stylesheets/public/invites.scss
+++ b/app/assets/stylesheets/public/invites.scss
@@ -1,3 +1,5 @@
-// Place all the styles related to the invites controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.invites {
+  .column {
+    max-width: 450px;
+  }
+}
