--- a/app/views/kaminari/_paginator.html.haml
+++ b/app/views/kaminari/_paginator.html.haml
@@ -1,5 +1,5 @@
 = paginator.render do
-  %nav.ui.pagination.menu
+  %nav.ui.pagination.stackable.menu
     = first_page_tag unless current_page.first?
     = prev_page_tag unless current_page.first?
     - each_page do |page|
