--- a/app/views/bookmarks/_bookmarks_list.html.haml
+++ b/app/views/bookmarks/_bookmarks_list.html.haml
@@ -1,5 +1,5 @@
 - if bookmarks.any?
-  .ui.stackable.menu
+  - content_for :secondary_navbar do
     .ui.item
       = select_all_checkbox do
         %label
