make the view a bit nicer on mobile

--- a/app/views/oauth/authorizations/new.html.haml
+++ b/app/views/oauth/authorizations/new.html.haml
@@ -1,9 +1,9 @@
 - content_for :page_title do
   Authorize "#{ @pre_auth.client.name }"
 
-.ui.grid
-  .row
-    .centered.six.wide.column
+.ui.stackable.center.aligned.grid
+  .ui.middle.aligned.row
+    .six.wide.column
       .ui.segment
         %h3.ui.header
           .content
