update a lot of the admin grid styling for better mobile views

--- a/app/views/admin/invitations/index.html.haml
+++ b/app/views/admin/invitations/index.html.haml
@@ -16,7 +16,7 @@
           %i.trash.icon
           delete all
 
-%table.ui.celled.table#stickContext
+%table.ui.celled.table
   %thead
     %tr
       %th= select_all_checkbox
