--- a/app/views/admin/service_announcements/index.html.haml
+++ b/app/views/admin/service_announcements/index.html.haml
@@ -17,7 +17,7 @@
           delete all
 
 
-%table.ui.celled.table#stickContext
+%table.ui.celled.table
   %thead
     %tr
       %th= select_all_checkbox
