--- a/app/views/admin/home/home.html.haml
+++ b/app/views/admin/home/home.html.haml
@@ -7,6 +7,7 @@
 
     .ui.list
       = link_to "service announcements", admin_service_announcements_path, class: "item"
+      = link_to "oauth applications", admin_applications_path, class: "item"
 
   .column
     %h2.dividing.header user admin
