--- a/app/views/admin/applications/edit.html.haml
+++ b/app/views/admin/applications/edit.html.haml
@@ -5,3 +5,17 @@
 = link_to 'Show', @admin_application
 \|
 = link_to 'Back', admin_applications_path
+
+- content_for :page_title do
+  Editing "#{ @application.name }"
+
+- content_for :menu do
+  .item
+    .divider
+    .header Applications
+    .menu
+      = link_to admin_application_path(@application), class: "item" do
+        %i.expand.icon
+        view
+
+= render partial: "form", locals: { application: @application }
